# znlopt_k

./: .gitmodules  build.zig  build.zig.zon
libs/nlopt/: build.zig  build.zig.zon
libs/nlopt/src/: CMakeLists.txt
libs/nlopt/src/lib/: CMakeLists.txt
libs/nlopt/src/lib/nlopt/: CMakeLists.txt
libs/nlopt/zig/: example.zig
src/: example.zig  znlopt.zig
utils/: cleanup.zig  setup.zig
